# Dotfiles

./: .gitignore  .zshrc  README.md  init.vim  kitty.conf  linkup
.config/kitty/: kitty.conf
.config/nvim/: init.lua
.config/nvim/lua/plugins/: autopairs.lua  blink.lua  dap.lua  endwise.lua  friendly-snippets.lua  fswitch.lua  fugitive-gitlab.lua  fugitive.lua  gitgutter.lua  lsp.lua  markdown.lua  rainbow.lua  scrollbar.lua  surround.lua  telescope.lua  treesitter.lua  unimpaired.lua
.config/sway/: config
.config/waybar/: config  style.css
.config/yazi/: keymap.toml
.config/zsh/: aliases.zsh
.local/: vimcheat.md
Templates/: .clang-format  .clang-tidy  .gitignore
Templates/empty_cpp/: CMakeLists.txt
Templates/empty_sfml/: .gitignore  CMakeLists.txt
Templates/empty_sfml/src/: main.cpp
kitty/: kitty.conf
nvim/: init.lua  init.vim
nvim/lua/plugins/: blink.lua  commentary.lua  dap.lua  fswitch.lua  fugitive.lua  harpoon.lua  lsp.lua  noice.lua  telescope.lua  tmux.lua  vim-code-dark.lua  yazi.lua
nvim/plugins/: plugins  telescope.nvim  vim-code-dark  yazi.nvim
sway/: config
tmux/: tmux.conf
waybar/: audio.sh  config.bak  style.css
zsh/: .zshrc  aliases.zsh
